# ramparts

./: .gitignore  Cargo.toml  Deploy-Dockerfile  MCP-Dockerfile  README.md  config.yaml  test_mcp_server.py
.cursor/rules/: mcp.json
.github/workflows/: cicd.yml  cron.yml  release.yml
common/: Cargo.toml
common/src/: lib.rs
docs/: proxy.md
docs/proxy/: E2E_TEST_RESULTS.md  LOAD_TEST_RESULTS.md
examples/: README.md  demo_proxy.sh  docker-compose.proxy.yml  proxy-config.env
extensions/ramparts-mcp-guardian/: CHANGELOG.md  README.md  package.json
extensions/ramparts-mcp-guardian/src/: extension.ts  mcpConfigManager.ts  rampartsManager.ts  statusBar.ts  treeProvider.ts
extensions/ramparts-mcp-guardian/src/test/: runTest.js
proxy/: Cargo.toml
proxy/src/: async_validation.rs  batch.rs  cache.rs  config.rs  javelin.rs  lib.rs  licensing.rs  logging.rs  main.rs  mcp_server.rs  predictive.rs  proxy.rs  streaming.rs  validation_service.rs
scan/src/: scanner.rs  types.rs
scripts/: build-release.sh  install.sh
src/: config.rs  core.rs  main.rs  mcp_client.rs  mcp_server.rs  scanner.rs  types.rs
src/security/: mod.rs
testing/load-tests/: README.md  load_test.py  simple_load_test.py  stress_test.py
