[package]
name = "ramparts-proxy"
version = "0.7.0"
edition = "2021"
authors = ["Sharath Rajasekar <sharath@getjavelin.com>"]
description = "MCP proxy with Javelin Guardrails integration (Proprietary License)"
license = "LicenseRef-Javelin-Proprietary"
repository = "https://github.com/getjavelin/ramparts"

[[bin]]
name = "ramparts-proxy"
path = "src/main.rs"

[[bin]]
name = "ramparts-mcp-proxy-stdio"
path = "src/bin/ramparts-mcp-proxy-stdio.rs"

[dependencies]
# Local dependency
ramparts-common = { path = "../common" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Official Rust MCP SDK
rmcp = { version = "0.3.2", features = [
    "client",
    "server",
    "macros",
    "schemars",
    "reqwest",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-sse-client",
    "transport-worker",
    "transport-io",
    "transport-sse-server",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session"
] }

# Async utilities
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Web framework for proxy server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "0.14"

# HTTP utilities
http = "0.2"
http-body-util = "0.1"

# Async channels
tokio-stream = "0.1"

# Random number generation
rand = "0.8"

# JSON Schema
schemars = "1"

# Performance optimizations
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10"
dashmap = "5.5"
